// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Button examples ButtonAsLinkButtonComponent should render correctly 1`] = `
<div>
  <a
    class="v-button"
    href="./components/button"
    type="button"
    v-button=""
  >
     Primary action 
    <svg
      aria-hidden="true"
      class="v-icon v-icon-chevron-right v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      v-icon-visa-chevron-right-tiny=""
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        class="v-icon-primary"
        d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
      />
    </svg>
  </a>
</div>
`;

exports[`Button examples DestructivePrimaryButtonComponent should render correctly 1`] = `
<div>
  <button
    class="v-button v-button-destructive"
    destructive=""
    type="button"
    v-button=""
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-delete v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      v-icon-visa-delete-tiny=""
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        class="v-icon-secondary"
        d="M9 2.00049H16V4.00049H14V16.0005H2V6.00049H4V14.0005H12V4.00049H0V2.00049H7V0.000488281H9V2.00049Z"
      />
      <path
        class="v-icon-primary"
        d="M11.207 7.20752L9.41406 9.00049L11.207 10.7935L9.79297 12.2075L8 10.4146L6.20703 12.2075L4.79297 10.7935L6.58594 9.00049L4.79297 7.20752L6.20703 5.79346L8 7.58643L9.79297 5.79346L11.207 7.20752Z"
      />
      <defs>
        <clippath>
          <rect
            height="16"
            transform="translate(0 0.000488281)"
            width="16"
          />
        </clippath>
      </defs>
    </svg>
    Destructive action
  </button>
</div>
`;

exports[`Button examples DestructiveSecondaryButtonComponent should render correctly 1`] = `
<div>
  <button
    buttoncolor="secondary"
    class="v-button v-button-destructive v-button-secondary"
    destructive=""
    type="button"
    v-button=""
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-delete v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      v-icon-visa-delete-tiny=""
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        class="v-icon-secondary"
        d="M9 2.00049H16V4.00049H14V16.0005H2V6.00049H4V14.0005H12V4.00049H0V2.00049H7V0.000488281H9V2.00049Z"
      />
      <path
        class="v-icon-primary"
        d="M11.207 7.20752L9.41406 9.00049L11.207 10.7935L9.79297 12.2075L8 10.4146L6.20703 12.2075L4.79297 10.7935L6.58594 9.00049L4.79297 7.20752L6.20703 5.79346L8 7.58643L9.79297 5.79346L11.207 7.20752Z"
      />
      <defs>
        <clippath>
          <rect
            height="16"
            transform="translate(0 0.000488281)"
            width="16"
          />
        </clippath>
      </defs>
    </svg>
    Destructive action
  </button>
</div>
`;

exports[`Button examples DestructiveTertiaryButtonComponent should render correctly 1`] = `
<div>
  <button
    buttoncolor="tertiary"
    class="v-button v-button-destructive v-button-tertiary"
    destructive=""
    type="button"
    v-button=""
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-delete v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      v-icon-visa-delete-tiny=""
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        class="v-icon-secondary"
        d="M9 2.00049H16V4.00049H14V16.0005H2V6.00049H4V14.0005H12V4.00049H0V2.00049H7V0.000488281H9V2.00049Z"
      />
      <path
        class="v-icon-primary"
        d="M11.207 7.20752L9.41406 9.00049L11.207 10.7935L9.79297 12.2075L8 10.4146L6.20703 12.2075L4.79297 10.7935L6.58594 9.00049L4.79297 7.20752L6.20703 5.79346L8 7.58643L9.79297 5.79346L11.207 7.20752Z"
      />
      <defs>
        <clippath>
          <rect
            height="16"
            transform="translate(0 0.000488281)"
            width="16"
          />
        </clippath>
      </defs>
    </svg>
     Destructive action

  </button>
</div>
`;

exports[`Button examples IconButtonPrimaryAlternateButtonComponent should render correctly 1`] = `
<div>
  <button
    aria-label="primary action"
    class="v-alternate v-button v-button-icon"
    type="button"
    v-button-icon=""
    valternate=""
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-add v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      v-icon-visa-add-tiny=""
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        class="v-icon-primary"
        d="M9 7H16V9H9V16H7V9H0V7H7V0H9V7Z"
      />
      <defs>
        <clippath>
          <rect
            height="16"
            width="16"
          />
        </clippath>
      </defs>
    </svg>
  </button>
</div>
`;

exports[`Button examples IconButtonPrimaryButtonComponent should render correctly 1`] = `
<div>
  <button
    aria-label="primary action"
    class="v-button v-button-icon"
    type="button"
    v-button-icon=""
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-add v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      v-icon-visa-add-tiny=""
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        class="v-icon-primary"
        d="M9 7H16V9H9V16H7V9H0V7H7V0H9V7Z"
      />
      <defs>
        <clippath>
          <rect
            height="16"
            width="16"
          />
        </clippath>
      </defs>
    </svg>
  </button>
</div>
`;

exports[`Button examples IconButtonPrimaryDisabledButtonComponent should render correctly 1`] = `
<div>
  <div
    class="v-flex v-flex-row"
    vflex=""
    vflexrow=""
  >
    <div
      class="v-gap-2 v-align-items-center v-flex v-flex-col"
      valignitemscenter=""
      vflex=""
      vflexcol=""
      vgap="2"
    >
      <button
        aria-labelledby="primary-icon-disabled-label"
        class="v-button v-button-icon"
        disabled="disabled"
        type="button"
        v-button-icon=""
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-add v-icon-tiny v-icon-visa"
          focusable="false"
          height="16"
          v-icon-visa-add-tiny=""
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            class="v-icon-primary"
            d="M9 7H16V9H9V16H7V9H0V7H7V0H9V7Z"
          />
          <defs>
            <clippath>
              <rect
                height="16"
                width="16"
              />
            </clippath>
          </defs>
        </svg>
      </button>
      <span
        class="v-typography-label-small"
        id="primary-icon-disabled-label"
        style="color: var(--palette-default-disabled);"
        vtypography="label-small"
      >
         Action 
      </span>
    </div>
  </div>
</div>
`;

exports[`Button examples IconButtonPrimaryLabelButtonComponent should render correctly 1`] = `
<div>
  <div
    class="v-flex v-flex-row"
    vflex=""
    vflexrow=""
  >
    <div
      class="v-gap-2 v-align-items-center v-flex v-flex-col"
      valignitemscenter=""
      vflex=""
      vflexcol=""
      vgap="2"
    >
      <button
        aria-labelledby="primary-icon-label"
        class="v-button v-button-icon"
        type="button"
        v-button-icon=""
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-add v-icon-tiny v-icon-visa"
          focusable="false"
          height="16"
          v-icon-visa-add-tiny=""
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            class="v-icon-primary"
            d="M9 7H16V9H9V16H7V9H0V7H7V0H9V7Z"
          />
          <defs>
            <clippath>
              <rect
                height="16"
                width="16"
              />
            </clippath>
          </defs>
        </svg>
      </button>
      <span
        class="v-typography-label-small"
        id="primary-icon-label"
        vtypography="label-small"
      >
        Action
      </span>
    </div>
  </div>
</div>
`;

exports[`Button examples IconButtonPrimaryLargeButtonComponent should render correctly 1`] = `
<div>
  <button
    aria-label="primary action"
    buttonsize="large"
    class="v-button v-button-icon v-button-large"
    type="button"
    v-button-icon=""
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-add v-icon-low v-icon-visa"
      focusable="false"
      height="24"
      v-icon-visa-add-low=""
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        class="v-icon-primary"
        d="M13 11H24V13H13V24H11V13H0V11H11V0H13V11Z"
      />
      <defs>
        <clippath>
          <rect
            height="24"
            width="24"
          />
        </clippath>
      </defs>
    </svg>
  </button>
</div>
`;

exports[`Button examples IconButtonPrimarySmallButtonComponent should render correctly 1`] = `
<div>
  <button
    aria-label="primary action"
    buttonsize="small"
    class="v-button v-button-icon v-button-small"
    type="button"
    v-button-icon=""
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-add v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      v-icon-visa-add-tiny=""
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        class="v-icon-primary"
        d="M9 7H16V9H9V16H7V9H0V7H7V0H9V7Z"
      />
      <defs>
        <clippath>
          <rect
            height="16"
            width="16"
          />
        </clippath>
      </defs>
    </svg>
  </button>
</div>
`;

exports[`Button examples IconButtonSecondaryAlternateButtonComponent should render correctly 1`] = `
<div>
  <button
    aria-label="secondary action"
    buttoncolor="secondary"
    class="v-alternate v-button v-button-icon v-button-secondary"
    type="button"
    v-button-icon=""
    valternate=""
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-connect v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      v-icon-visa-connect-tiny=""
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        class="v-icon-secondary"
        d="M10.1958 10.6074C10.6981 10.2283 11.3217 10.0011 11.9995 10.001C13.6563 10.001 14.9994 11.3442 14.9995 13.001C14.9995 14.6578 13.6564 16.001 11.9995 16.001C10.3429 16.0007 8.99951 14.6577 8.99951 13.001C8.99953 12.7501 9.03426 12.5073 9.09229 12.2744L7.69971 11.3643C8.14828 10.8711 8.49844 10.2875 8.72217 9.64453L10.1958 10.6074ZM11.9995 12.001C11.4475 12.0012 10.9996 12.449 10.9995 13.001C10.9995 13.5531 11.4474 14.0007 11.9995 14.001C12.5518 14.001 12.9995 13.5533 12.9995 13.001C12.9994 12.4488 12.5517 12.001 11.9995 12.001Z"
      />
      <path
        class="v-icon-primary"
        d="M12 0.000976562C13.6569 0.000976562 15 1.34412 15 3.00098C15 4.65783 13.6569 6.00098 12 6.00098C11.3221 6.00098 10.6986 5.77368 10.1963 5.39453L6.95996 7.51074C6.98618 7.67028 7 7.83402 7 8.00098C7 9.65783 5.65685 11.001 4 11.001C2.34315 11.001 1 9.65783 1 8.00098C1 6.34412 2.34315 5.00098 4 5.00098C4.76276 5.00098 5.45698 5.28795 5.98633 5.75684L9.0918 3.72656C9.03396 3.49397 9 3.25146 9 3.00098C9 1.34412 10.3431 0.000976562 12 0.000976562ZM4 7.00098C3.44772 7.00098 3 7.44869 3 8.00098C3 8.55326 3.44772 9.00098 4 9.00098C4.55228 9.00098 5 8.55326 5 8.00098C5 7.44869 4.55228 7.00098 4 7.00098ZM12 2.00098C11.4477 2.00098 11 2.44869 11 3.00098C11 3.55326 11.4477 4.00098 12 4.00098C12.5523 4.00098 13 3.55326 13 3.00098C13 2.44869 12.5523 2.00098 12 2.00098Z"
      />
      <defs>
        <clippath>
          <rect
            height="16"
            transform="translate(0 0.000976562)"
            width="16"
          />
        </clippath>
      </defs>
    </svg>
  </button>
</div>
`;

exports[`Button examples IconButtonSecondaryButtonComponent should render correctly 1`] = `
<div>
  <button
    aria-label="secondary action"
    buttoncolor="secondary"
    class="v-button v-button-icon v-button-secondary"
    type="button"
    v-button-icon=""
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-connect v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      v-icon-visa-connect-tiny=""
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        class="v-icon-secondary"
        d="M10.1958 10.6074C10.6981 10.2283 11.3217 10.0011 11.9995 10.001C13.6563 10.001 14.9994 11.3442 14.9995 13.001C14.9995 14.6578 13.6564 16.001 11.9995 16.001C10.3429 16.0007 8.99951 14.6577 8.99951 13.001C8.99953 12.7501 9.03426 12.5073 9.09229 12.2744L7.69971 11.3643C8.14828 10.8711 8.49844 10.2875 8.72217 9.64453L10.1958 10.6074ZM11.9995 12.001C11.4475 12.0012 10.9996 12.449 10.9995 13.001C10.9995 13.5531 11.4474 14.0007 11.9995 14.001C12.5518 14.001 12.9995 13.5533 12.9995 13.001C12.9994 12.4488 12.5517 12.001 11.9995 12.001Z"
      />
      <path
        class="v-icon-primary"
        d="M12 0.000976562C13.6569 0.000976562 15 1.34412 15 3.00098C15 4.65783 13.6569 6.00098 12 6.00098C11.3221 6.00098 10.6986 5.77368 10.1963 5.39453L6.95996 7.51074C6.98618 7.67028 7 7.83402 7 8.00098C7 9.65783 5.65685 11.001 4 11.001C2.34315 11.001 1 9.65783 1 8.00098C1 6.34412 2.34315 5.00098 4 5.00098C4.76276 5.00098 5.45698 5.28795 5.98633 5.75684L9.0918 3.72656C9.03396 3.49397 9 3.25146 9 3.00098C9 1.34412 10.3431 0.000976562 12 0.000976562ZM4 7.00098C3.44772 7.00098 3 7.44869 3 8.00098C3 8.55326 3.44772 9.00098 4 9.00098C4.55228 9.00098 5 8.55326 5 8.00098C5 7.44869 4.55228 7.00098 4 7.00098ZM12 2.00098C11.4477 2.00098 11 2.44869 11 3.00098C11 3.55326 11.4477 4.00098 12 4.00098C12.5523 4.00098 13 3.55326 13 3.00098C13 2.44869 12.5523 2.00098 12 2.00098Z"
      />
      <defs>
        <clippath>
          <rect
            height="16"
            transform="translate(0 0.000976562)"
            width="16"
          />
        </clippath>
      </defs>
    </svg>
  </button>
</div>
`;

exports[`Button examples IconButtonSecondaryDisabledButtonComponent should render correctly 1`] = `
<div>
  <div
    class="v-flex v-flex-row"
    vflex=""
    vflexrow=""
  >
    <div
      class="v-gap-2 v-align-items-center v-flex v-flex-col"
      valignitemscenter=""
      vflex=""
      vflexcol=""
      vgap="2"
    >
      <button
        aria-labelledby="secondary-icon-disabled-label"
        buttoncolor="secondary"
        class="v-button v-button-icon v-button-secondary"
        disabled="disabled"
        type="button"
        v-button-icon=""
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-connect v-icon-tiny v-icon-visa"
          focusable="false"
          height="16"
          v-icon-visa-connect-tiny=""
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            class="v-icon-secondary"
            d="M10.1958 10.6074C10.6981 10.2283 11.3217 10.0011 11.9995 10.001C13.6563 10.001 14.9994 11.3442 14.9995 13.001C14.9995 14.6578 13.6564 16.001 11.9995 16.001C10.3429 16.0007 8.99951 14.6577 8.99951 13.001C8.99953 12.7501 9.03426 12.5073 9.09229 12.2744L7.69971 11.3643C8.14828 10.8711 8.49844 10.2875 8.72217 9.64453L10.1958 10.6074ZM11.9995 12.001C11.4475 12.0012 10.9996 12.449 10.9995 13.001C10.9995 13.5531 11.4474 14.0007 11.9995 14.001C12.5518 14.001 12.9995 13.5533 12.9995 13.001C12.9994 12.4488 12.5517 12.001 11.9995 12.001Z"
          />
          <path
            class="v-icon-primary"
            d="M12 0.000976562C13.6569 0.000976562 15 1.34412 15 3.00098C15 4.65783 13.6569 6.00098 12 6.00098C11.3221 6.00098 10.6986 5.77368 10.1963 5.39453L6.95996 7.51074C6.98618 7.67028 7 7.83402 7 8.00098C7 9.65783 5.65685 11.001 4 11.001C2.34315 11.001 1 9.65783 1 8.00098C1 6.34412 2.34315 5.00098 4 5.00098C4.76276 5.00098 5.45698 5.28795 5.98633 5.75684L9.0918 3.72656C9.03396 3.49397 9 3.25146 9 3.00098C9 1.34412 10.3431 0.000976562 12 0.000976562ZM4 7.00098C3.44772 7.00098 3 7.44869 3 8.00098C3 8.55326 3.44772 9.00098 4 9.00098C4.55228 9.00098 5 8.55326 5 8.00098C5 7.44869 4.55228 7.00098 4 7.00098ZM12 2.00098C11.4477 2.00098 11 2.44869 11 3.00098C11 3.55326 11.4477 4.00098 12 4.00098C12.5523 4.00098 13 3.55326 13 3.00098C13 2.44869 12.5523 2.00098 12 2.00098Z"
          />
          <defs>
            <clippath>
              <rect
                height="16"
                transform="translate(0 0.000976562)"
                width="16"
              />
            </clippath>
          </defs>
        </svg>
      </button>
      <span
        class="v-typography-label-small"
        id="secondary-icon-disabled-label"
        style="color: var(--palette-default-disabled);"
        vtypography="label-small"
      >
         Action 
      </span>
    </div>
  </div>
</div>
`;

exports[`Button examples IconButtonSecondaryLabelButtonComponent should render correctly 1`] = `
<div>
  <div
    class="v-flex v-flex-row"
    vflex=""
    vflexrow=""
  >
    <div
      class="v-gap-2 v-align-items-center v-flex v-flex-col"
      valignitemscenter=""
      vflex=""
      vflexcol=""
      vgap="2"
    >
      <button
        aria-labelledby="secondary-icon-label"
        buttoncolor="secondary"
        class="v-button v-button-icon v-button-secondary"
        type="button"
        v-button-icon=""
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-connect v-icon-tiny v-icon-visa"
          focusable="false"
          height="16"
          v-icon-visa-connect-tiny=""
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            class="v-icon-secondary"
            d="M10.1958 10.6074C10.6981 10.2283 11.3217 10.0011 11.9995 10.001C13.6563 10.001 14.9994 11.3442 14.9995 13.001C14.9995 14.6578 13.6564 16.001 11.9995 16.001C10.3429 16.0007 8.99951 14.6577 8.99951 13.001C8.99953 12.7501 9.03426 12.5073 9.09229 12.2744L7.69971 11.3643C8.14828 10.8711 8.49844 10.2875 8.72217 9.64453L10.1958 10.6074ZM11.9995 12.001C11.4475 12.0012 10.9996 12.449 10.9995 13.001C10.9995 13.5531 11.4474 14.0007 11.9995 14.001C12.5518 14.001 12.9995 13.5533 12.9995 13.001C12.9994 12.4488 12.5517 12.001 11.9995 12.001Z"
          />
          <path
            class="v-icon-primary"
            d="M12 0.000976562C13.6569 0.000976562 15 1.34412 15 3.00098C15 4.65783 13.6569 6.00098 12 6.00098C11.3221 6.00098 10.6986 5.77368 10.1963 5.39453L6.95996 7.51074C6.98618 7.67028 7 7.83402 7 8.00098C7 9.65783 5.65685 11.001 4 11.001C2.34315 11.001 1 9.65783 1 8.00098C1 6.34412 2.34315 5.00098 4 5.00098C4.76276 5.00098 5.45698 5.28795 5.98633 5.75684L9.0918 3.72656C9.03396 3.49397 9 3.25146 9 3.00098C9 1.34412 10.3431 0.000976562 12 0.000976562ZM4 7.00098C3.44772 7.00098 3 7.44869 3 8.00098C3 8.55326 3.44772 9.00098 4 9.00098C4.55228 9.00098 5 8.55326 5 8.00098C5 7.44869 4.55228 7.00098 4 7.00098ZM12 2.00098C11.4477 2.00098 11 2.44869 11 3.00098C11 3.55326 11.4477 4.00098 12 4.00098C12.5523 4.00098 13 3.55326 13 3.00098C13 2.44869 12.5523 2.00098 12 2.00098Z"
          />
          <defs>
            <clippath>
              <rect
                height="16"
                transform="translate(0 0.000976562)"
                width="16"
              />
            </clippath>
          </defs>
        </svg>
      </button>
      <span
        class="v-typography-label-small"
        id="secondary-icon-label"
        vtypography="label-small"
      >
         Action 
      </span>
    </div>
  </div>
</div>
`;

exports[`Button examples IconButtonSecondaryLargeButtonComponent should render correctly 1`] = `
<div>
  <button
    aria-label="secondary action"
    buttoncolor="secondary"
    buttonsize="large"
    class="v-button v-button-icon v-button-large v-button-secondary"
    type="button"
    v-button-icon=""
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-connect v-icon-low v-icon-visa"
      focusable="false"
      height="24"
      v-icon-visa-connect-low=""
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        class="v-icon-secondary"
        d="M17 16.001C19.2091 16.001 21 17.7918 21 20.001C21 22.2101 19.2091 24.001 17 24.001C14.7909 24.001 13 22.2101 13 20.001C13 17.7918 14.7909 16.001 17 16.001ZM17 18.001C15.8954 18.001 15 18.8964 15 20.001C15 21.1055 15.8954 22.001 17 22.001C18.1046 22.001 19 21.1055 19 20.001C19 18.8964 18.1046 18.001 17 18.001ZM10.5 15.001C11.3284 15.001 12 15.6725 12 16.501C12 17.3294 11.3284 18.001 10.5 18.001C9.67157 18.001 9 17.3294 9 16.501C9 15.6725 9.67157 15.001 10.5 15.001Z"
      />
      <path
        class="v-icon-primary"
        d="M17 0.000976562C19.2091 0.000976562 21 1.79184 21 4.00098C21 6.21012 19.2091 8.00098 17 8.00098C15.975 8.00098 15.0398 7.61545 14.332 6.98145L8.77832 10.6846C8.92194 11.0968 9 11.5398 9 12.001C9 14.2101 7.20914 16.001 5 16.001C2.79086 16.001 1 14.2101 1 12.001C1 9.79184 2.79086 8.00098 5 8.00098C6.02506 8.00098 6.96015 8.38648 7.66797 9.02051L13.2217 5.31836C13.0779 4.90596 13 4.46238 13 4.00098C13 1.79184 14.7909 0.000976562 17 0.000976562ZM5 10.001C3.89543 10.001 3 10.8964 3 12.001C3 13.1055 3.89543 14.001 5 14.001C6.10457 14.001 7 13.1055 7 12.001C7 10.8964 6.10457 10.001 5 10.001ZM17 2.00098C15.8954 2.00098 15 2.89641 15 4.00098C15 5.10555 15.8954 6.00098 17 6.00098C18.1046 6.00098 19 5.10555 19 4.00098C19 2.89641 18.1046 2.00098 17 2.00098Z"
      />
    </svg>
  </button>
</div>
`;

exports[`Button examples PrimaryAlternateButtonComponent should render correctly 1`] = `
<div>
  <button
    class="v-alternate v-button"
    type="button"
    v-button=""
    valternate=""
  >
    Primary action
  </button>
</div>
`;

exports[`Button examples PrimaryDefaultButtonComponent should render correctly 1`] = `
<div>
  <button
    class="v-button"
    type="button"
    v-button=""
  >
    Primary action
  </button>
</div>
`;

exports[`Button examples PrimaryDisabledButtonComponent should render correctly 1`] = `
<div>
  <button
    class="v-button"
    disabled="disabled"
    type="button"
    v-button=""
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-file-upload v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      v-icon-visa-file-upload-tiny=""
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        class="v-icon-secondary"
        d="M2 14H14V10H16V16H0V10H2V14Z"
      />
      <path
        class="v-icon-primary"
        d="M8.71289 0.723633L12.501 4.57031L11.0762 5.97363L9.00098 3.86621V12.0039H7.00098V3.86621L4.9248 5.97363L3.5 4.57031L7.28809 0.723633L8.00098 0L8.71289 0.723633Z"
      />
    </svg>
    Primary action
  </button>
</div>
`;

exports[`Button examples PrimaryLargeButtonComponent should render correctly 1`] = `
<div>
  <button
    buttonsize="large"
    class="v-button v-icon-two-color v-button-large"
    type="button"
    v-button=""
    v-icon-two-color=""
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-file-upload v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      v-icon-visa-file-upload-tiny=""
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        class="v-icon-secondary"
        d="M2 14H14V10H16V16H0V10H2V14Z"
      />
      <path
        class="v-icon-primary"
        d="M8.71289 0.723633L12.501 4.57031L11.0762 5.97363L9.00098 3.86621V12.0039H7.00098V3.86621L4.9248 5.97363L3.5 4.57031L7.28809 0.723633L8.00098 0L8.71289 0.723633Z"
      />
    </svg>
    Primary action
  </button>
</div>
`;

exports[`Button examples PrimaryLeadingIconButtonComponent should render correctly 1`] = `
<div>
  <button
    class="v-button v-icon-two-color"
    type="button"
    v-button=""
    v-icon-two-color=""
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-file-upload v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      v-icon-visa-file-upload-tiny=""
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        class="v-icon-secondary"
        d="M2 14H14V10H16V16H0V10H2V14Z"
      />
      <path
        class="v-icon-primary"
        d="M8.71289 0.723633L12.501 4.57031L11.0762 5.97363L9.00098 3.86621V12.0039H7.00098V3.86621L4.9248 5.97363L3.5 4.57031L7.28809 0.723633L8.00098 0L8.71289 0.723633Z"
      />
    </svg>
    Primary action
  </button>
</div>
`;

exports[`Button examples PrimarySmallButtonComponent should render correctly 1`] = `
<div>
  <button
    buttonsize="small"
    class="v-button v-icon-two-color v-button-small"
    type="button"
    v-button=""
    v-icon-two-color=""
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-file-upload v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      v-icon-visa-file-upload-tiny=""
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        class="v-icon-secondary"
        d="M2 14H14V10H16V16H0V10H2V14Z"
      />
      <path
        class="v-icon-primary"
        d="M8.71289 0.723633L12.501 4.57031L11.0762 5.97363L9.00098 3.86621V12.0039H7.00098V3.86621L4.9248 5.97363L3.5 4.57031L7.28809 0.723633L8.00098 0L8.71289 0.723633Z"
      />
    </svg>
    Primary action
  </button>
</div>
`;

exports[`Button examples PrimaryTrailingIconButtonComponent should render correctly 1`] = `
<div>
  <button
    class="v-button v-icon-two-color"
    type="button"
    v-button=""
    v-icon-two-color=""
  >
     Primary action 
    <svg
      aria-hidden="true"
      class="v-icon v-icon-file-upload v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      v-icon-visa-file-upload-tiny=""
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        class="v-icon-secondary"
        d="M2 14H14V10H16V16H0V10H2V14Z"
      />
      <path
        class="v-icon-primary"
        d="M8.71289 0.723633L12.501 4.57031L11.0762 5.97363L9.00098 3.86621V12.0039H7.00098V3.86621L4.9248 5.97363L3.5 4.57031L7.28809 0.723633L8.00098 0L8.71289 0.723633Z"
      />
    </svg>
  </button>
</div>
`;

exports[`Button examples SecondaryAlternateButtonComponent should render correctly 1`] = `
<div>
  <button
    buttoncolor="secondary"
    class="v-alternate v-button v-button-secondary"
    type="button"
    v-button=""
    valternate=""
  >
    Secondary action
  </button>
</div>
`;

exports[`Button examples SecondaryDefaultButtonComponent should render correctly 1`] = `
<div>
  <button
    buttoncolor="secondary"
    class="v-button v-button-secondary"
    type="button"
    v-button=""
  >
    Secondary action
  </button>
</div>
`;

exports[`Button examples SecondaryDisabledButtonComponent should render correctly 1`] = `
<div>
  <button
    buttoncolor="secondary"
    class="v-button v-button-secondary"
    disabled="disabled"
    type="button"
    v-button=""
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-save v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      v-icon-visa-save-tiny=""
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        class="v-icon-secondary"
        d="M8.94336 12.1367L10.1602 10.8213L11.5 12.2578L8 16L4.5 12.2578L5.83984 10.8213L7.05664 12.1367V8H8.94336V12.1367Z"
      />
      <path
        class="v-icon-primary"
        d="M16 16H13V14H14V6H2V14H3V16H0V4H16V16ZM8 2H0V0H8V2Z"
      />
      <defs>
        <clippath>
          <rect
            height="16"
            width="16"
          />
        </clippath>
      </defs>
    </svg>
    Secondary action
  </button>
</div>
`;

exports[`Button examples SecondaryLargeButtonComponent should render correctly 1`] = `
<div>
  <button
    buttoncolor="secondary"
    buttonsize="large"
    class="v-button v-button-large v-button-secondary"
    type="button"
    v-button=""
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-save v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      v-icon-visa-save-tiny=""
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        class="v-icon-secondary"
        d="M8.94336 12.1367L10.1602 10.8213L11.5 12.2578L8 16L4.5 12.2578L5.83984 10.8213L7.05664 12.1367V8H8.94336V12.1367Z"
      />
      <path
        class="v-icon-primary"
        d="M16 16H13V14H14V6H2V14H3V16H0V4H16V16ZM8 2H0V0H8V2Z"
      />
      <defs>
        <clippath>
          <rect
            height="16"
            width="16"
          />
        </clippath>
      </defs>
    </svg>
    Secondary action
  </button>
</div>
`;

exports[`Button examples SecondaryLeadingIconButtonComponent should render correctly 1`] = `
<div>
  <button
    buttoncolor="secondary"
    class="v-button v-button-secondary"
    type="button"
    v-button=""
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-save v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      v-icon-visa-save-tiny=""
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        class="v-icon-secondary"
        d="M8.94336 12.1367L10.1602 10.8213L11.5 12.2578L8 16L4.5 12.2578L5.83984 10.8213L7.05664 12.1367V8H8.94336V12.1367Z"
      />
      <path
        class="v-icon-primary"
        d="M16 16H13V14H14V6H2V14H3V16H0V4H16V16ZM8 2H0V0H8V2Z"
      />
      <defs>
        <clippath>
          <rect
            height="16"
            width="16"
          />
        </clippath>
      </defs>
    </svg>
    Secondary action
  </button>
</div>
`;

exports[`Button examples SecondarySmallButtonComponent should render correctly 1`] = `
<div>
  <button
    buttoncolor="secondary"
    buttonsize="small"
    class="v-button v-button-secondary v-button-small"
    type="button"
    v-button=""
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-save v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      v-icon-visa-save-tiny=""
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        class="v-icon-secondary"
        d="M8.94336 12.1367L10.1602 10.8213L11.5 12.2578L8 16L4.5 12.2578L5.83984 10.8213L7.05664 12.1367V8H8.94336V12.1367Z"
      />
      <path
        class="v-icon-primary"
        d="M16 16H13V14H14V6H2V14H3V16H0V4H16V16ZM8 2H0V0H8V2Z"
      />
      <defs>
        <clippath>
          <rect
            height="16"
            width="16"
          />
        </clippath>
      </defs>
    </svg>
     Secondary action

  </button>
</div>
`;

exports[`Button examples SecondaryTrailingIconButtonComponent should render correctly 1`] = `
<div>
  <button
    buttoncolor="secondary"
    class="v-button v-button-secondary"
    type="button"
    v-button=""
  >
     Secondary action 
    <svg
      aria-hidden="true"
      class="v-icon v-icon-save v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      v-icon-visa-save-tiny=""
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        class="v-icon-secondary"
        d="M8.94336 12.1367L10.1602 10.8213L11.5 12.2578L8 16L4.5 12.2578L5.83984 10.8213L7.05664 12.1367V8H8.94336V12.1367Z"
      />
      <path
        class="v-icon-primary"
        d="M16 16H13V14H14V6H2V14H3V16H0V4H16V16ZM8 2H0V0H8V2Z"
      />
      <defs>
        <clippath>
          <rect
            height="16"
            width="16"
          />
        </clippath>
      </defs>
    </svg>
  </button>
</div>
`;

exports[`Button examples StackedIconButtonAlternateButtonComponent should render correctly 1`] = `
<div>
  <button
    aria-label="Glossary"
    buttoncolor="tertiary"
    class="v-alternate v-button v-button-stacked v-button-tertiary"
    type="button"
    v-button-stacked=""
    valternate=""
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-glossary v-icon-low v-icon-visa"
      focusable="false"
      height="24"
      v-icon-visa-glossary-low=""
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        class="v-icon-secondary"
        d="M9 16H5V14H9V16ZM19 14V16H15V14H19ZM9 12H5V10H9V12ZM19 12H15V10H19V12ZM9 8H5V6H9V8ZM19 8H15V6H19V8Z"
      />
      <path
        class="v-icon-primary"
        d="M21 1C22.0999 1 22.9998 1.91183 23 3.02637V19.2402C23 20.3549 22.1 21.2676 21 21.2676H14.4102L12.71 23H11.2998L9.58984 21.2676H3C1.9 21.2676 1 20.3549 1 19.2402V3.02637C1.00019 1.91183 1.90011 1 3 1H21ZM3 19.2402H9.58984C10.1197 19.2402 10.63 19.453 11 19.8379V3.02637H3V19.2402ZM13 19.8379C13.37 19.4631 13.8903 19.2402 14.4102 19.2402H21V3.02637H13V19.8379Z"
      />
    </svg>
     Action

  </button>
</div>
`;

exports[`Button examples StackedIconButtonDefaultButtonComponent should render correctly 1`] = `
<div>
  <button
    aria-label="Glossary"
    buttoncolor="tertiary"
    class="v-button v-button-stacked v-button-tertiary"
    type="button"
    v-button-stacked=""
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-glossary v-icon-low v-icon-visa"
      focusable="false"
      height="24"
      v-icon-visa-glossary-low=""
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        class="v-icon-secondary"
        d="M9 16H5V14H9V16ZM19 14V16H15V14H19ZM9 12H5V10H9V12ZM19 12H15V10H19V12ZM9 8H5V6H9V8ZM19 8H15V6H19V8Z"
      />
      <path
        class="v-icon-primary"
        d="M21 1C22.0999 1 22.9998 1.91183 23 3.02637V19.2402C23 20.3549 22.1 21.2676 21 21.2676H14.4102L12.71 23H11.2998L9.58984 21.2676H3C1.9 21.2676 1 20.3549 1 19.2402V3.02637C1.00019 1.91183 1.90011 1 3 1H21ZM3 19.2402H9.58984C10.1197 19.2402 10.63 19.453 11 19.8379V3.02637H3V19.2402ZM13 19.8379C13.37 19.4631 13.8903 19.2402 14.4102 19.2402H21V3.02637H13V19.8379Z"
      />
    </svg>
     Action

  </button>
</div>
`;

exports[`Button examples TertiaryAlternateButtonComponent should render correctly 1`] = `
<div>
  <button
    buttoncolor="tertiary"
    class="v-alternate v-button v-button-tertiary"
    type="button"
    v-button=""
    valternate=""
  >
    Tertiary action
  </button>
</div>
`;

exports[`Button examples TertiaryDefaultButtonComponent should render correctly 1`] = `
<div>
  <button
    buttoncolor="tertiary"
    class="v-button v-button-tertiary"
    type="button"
    v-button=""
  >
    Tertiary action
  </button>
</div>
`;

exports[`Button examples TertiaryDisabledButtonComponent should render correctly 1`] = `
<div>
  <button
    buttoncolor="tertiary"
    class="v-button v-button-tertiary"
    disabled="disabled"
    type="button"
    v-button=""
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-history v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      v-icon-visa-history-tiny=""
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        class="v-icon-secondary"
        d="M9 7.19531L10.4697 6.27734L11.5303 7.97266L7 10.8047V4H9V7.19531Z"
      />
      <path
        class="v-icon-primary"
        d="M8 0C12.4183 0 16 3.58172 16 8C16 12.4183 12.4183 16 8 16V14C11.3137 14 14 11.3137 14 8C14 4.68629 11.3137 2 8 2C4.68629 2 2 4.68629 2 8C2 9.77573 2.77224 11.3714 4 12.4707V11H6V16H1V14H2.70898C1.04865 12.5348 0 10.3905 0 8C0 3.58172 3.58172 0 8 0Z"
      />
      <defs>
        <clippath>
          <rect
            height="16"
            width="16"
          />
        </clippath>
      </defs>
    </svg>
     Tertiary action

  </button>
</div>
`;

exports[`Button examples TertiaryLargeButtonComponent should render correctly 1`] = `
<div>
  <button
    buttoncolor="tertiary"
    buttonsize="large"
    class="v-button v-button-large v-button-tertiary"
    type="button"
    v-button=""
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-history v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      v-icon-visa-history-tiny=""
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        class="v-icon-secondary"
        d="M9 7.19531L10.4697 6.27734L11.5303 7.97266L7 10.8047V4H9V7.19531Z"
      />
      <path
        class="v-icon-primary"
        d="M8 0C12.4183 0 16 3.58172 16 8C16 12.4183 12.4183 16 8 16V14C11.3137 14 14 11.3137 14 8C14 4.68629 11.3137 2 8 2C4.68629 2 2 4.68629 2 8C2 9.77573 2.77224 11.3714 4 12.4707V11H6V16H1V14H2.70898C1.04865 12.5348 0 10.3905 0 8C0 3.58172 3.58172 0 8 0Z"
      />
      <defs>
        <clippath>
          <rect
            height="16"
            width="16"
          />
        </clippath>
      </defs>
    </svg>
     Large Tertiary action

  </button>
</div>
`;

exports[`Button examples TertiaryLeadingIconButtonComponent should render correctly 1`] = `
<div>
  <button
    buttoncolor="tertiary"
    class="v-button v-button-tertiary"
    type="button"
    v-button=""
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-history v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      v-icon-visa-history-tiny=""
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        class="v-icon-secondary"
        d="M9 7.19531L10.4697 6.27734L11.5303 7.97266L7 10.8047V4H9V7.19531Z"
      />
      <path
        class="v-icon-primary"
        d="M8 0C12.4183 0 16 3.58172 16 8C16 12.4183 12.4183 16 8 16V14C11.3137 14 14 11.3137 14 8C14 4.68629 11.3137 2 8 2C4.68629 2 2 4.68629 2 8C2 9.77573 2.77224 11.3714 4 12.4707V11H6V16H1V14H2.70898C1.04865 12.5348 0 10.3905 0 8C0 3.58172 3.58172 0 8 0Z"
      />
      <defs>
        <clippath>
          <rect
            height="16"
            width="16"
          />
        </clippath>
      </defs>
    </svg>
     Tertiary action

  </button>
</div>
`;

exports[`Button examples TertiarySmallButtonComponent should render correctly 1`] = `
<div>
  <button
    buttoncolor="tertiary"
    buttonsize="small"
    class="v-button v-button-small v-button-tertiary"
    type="button"
    v-button=""
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-history v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      v-icon-visa-history-tiny=""
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        class="v-icon-secondary"
        d="M9 7.19531L10.4697 6.27734L11.5303 7.97266L7 10.8047V4H9V7.19531Z"
      />
      <path
        class="v-icon-primary"
        d="M8 0C12.4183 0 16 3.58172 16 8C16 12.4183 12.4183 16 8 16V14C11.3137 14 14 11.3137 14 8C14 4.68629 11.3137 2 8 2C4.68629 2 2 4.68629 2 8C2 9.77573 2.77224 11.3714 4 12.4707V11H6V16H1V14H2.70898C1.04865 12.5348 0 10.3905 0 8C0 3.58172 3.58172 0 8 0Z"
      />
      <defs>
        <clippath>
          <rect
            height="16"
            width="16"
          />
        </clippath>
      </defs>
    </svg>
     Small button

  </button>
</div>
`;

exports[`Button examples TertiaryTrailingIconButtonComponent should render correctly 1`] = `
<div>
  <button
    buttoncolor="tertiary"
    class="v-button v-button-tertiary"
    type="button"
    v-button=""
  >
     Tertiary action 
    <svg
      aria-hidden="true"
      class="v-icon v-icon-history v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      v-icon-visa-history-tiny=""
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        class="v-icon-secondary"
        d="M9 7.19531L10.4697 6.27734L11.5303 7.97266L7 10.8047V4H9V7.19531Z"
      />
      <path
        class="v-icon-primary"
        d="M8 0C12.4183 0 16 3.58172 16 8C16 12.4183 12.4183 16 8 16V14C11.3137 14 14 11.3137 14 8C14 4.68629 11.3137 2 8 2C4.68629 2 2 4.68629 2 8C2 9.77573 2.77224 11.3714 4 12.4707V11H6V16H1V14H2.70898C1.04865 12.5348 0 10.3905 0 8C0 3.58172 3.58172 0 8 0Z"
      />
      <defs>
        <clippath>
          <rect
            height="16"
            width="16"
          />
        </clippath>
      </defs>
    </svg>
  </button>
</div>
`;

exports[`Button examples UiIconAlternateButtonComponent should render correctly 1`] = `
<div>
  <button
    aria-label="notifications"
    buttoncolor="tertiary"
    class="v-alternate v-button v-button-icon v-button-tertiary"
    type="button"
    v-button-icon=""
    valternate=""
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-notifications v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      v-icon-visa-notifications-tiny=""
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        class="v-icon-primary"
        d="M8 0C11.3137 0 14 2.68629 14 6V10H15V12H11V13C11 14.6569 9.65685 16 8 16C6.34315 16 5 14.6569 5 13V12H1V10H12V6C12 3.79086 10.2091 2 8 2C5.79086 2 4 3.79086 4 6V8H2V6C2 2.68629 4.68629 0 8 0ZM7 13C7 13.5523 7.44772 14 8 14C8.55228 14 9 13.5523 9 13V12H7V13Z"
      />
    </svg>
  </button>
</div>
`;

exports[`Button examples UiIconBadgeButtonComponent should render correctly 1`] = `
<div>
  <button
    aria-describedby="a-v-badge-0"
    aria-label="notifications"
    buttoncolor="tertiary"
    class="v-button v-button-icon v-button-tertiary"
    type="button"
    v-button-icon=""
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-notifications v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      v-icon-visa-notifications-tiny=""
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        class="v-icon-primary"
        d="M8 0C11.3137 0 14 2.68629 14 6V10H15V12H11V13C11 14.6569 9.65685 16 8 16C6.34315 16 5 14.6569 5 13V12H1V10H12V6C12 3.79086 10.2091 2 8 2C5.79086 2 4 3.79086 4 6V8H2V6C2 2.68629 4.68629 0 8 0ZM7 13C7 13.5523 7.44772 14 8 14C8.55228 14 9 13.5523 9 13V12H7V13Z"
      />
    </svg>
    <sup
      aria-label="9 unread notifications"
      class="v-badge v-badge-default v-badge-number v-typography-label-active"
      id="a-v-badge-0"
      number=""
      v-badge=""
      vtypography="label-active"
    >
      9
    </sup>
  </button>
</div>
`;

exports[`Button examples UiIconLargeButtonComponent should render correctly 1`] = `
<div>
  <button
    aria-label="notifications"
    buttoncolor="tertiary"
    buttonsize="large"
    class="v-button v-button-icon v-button-large v-button-tertiary"
    type="button"
    v-button-icon=""
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-low v-icon-notifications v-icon-visa"
      focusable="false"
      height="24"
      v-icon-visa-notifications-low=""
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        class="v-icon-secondary"
        d="M12 0C15.866 0 19 3.13403 19 7V11C19 12.274 19.5082 12.9741 20.084 13.3887C20.7108 13.84 21.4934 14 22 14C22.5523 14 23 14.4477 23 15V17C23 17.5523 22.5523 18 22 18H1V16H21V15.8975C20.3333 15.766 19.5876 15.4952 18.916 15.0117C17.8252 14.2263 17 12.9259 17 11V7C17 4.23858 14.7614 2 12 2C9.23858 2 7 4.23858 7 7V14H5V7C5 3.13401 8.13401 0 12 0ZM12 4C13.6569 4 15 5.34315 15 7V11H13V7C13 6.44772 12.5523 6 12 6V4Z"
      />
      <path
        class="v-icon-primary"
        d="M15 21C15 22.6569 13.6569 24 12 24C10.3431 24 9 22.6569 9 21V20H11V21C11 21.5523 11.4477 22 12 22C12.5523 22 13 21.5523 13 21V20H15V21Z"
      />
    </svg>
  </button>
</div>
`;

exports[`Button examples UiIconMediumButtonComponent should render correctly 1`] = `
<div>
  <button
    aria-label="notifications"
    buttoncolor="tertiary"
    class="v-button v-button-icon v-button-tertiary"
    type="button"
    v-button-icon=""
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-notifications v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      v-icon-visa-notifications-tiny=""
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        class="v-icon-primary"
        d="M8 0C11.3137 0 14 2.68629 14 6V10H15V12H11V13C11 14.6569 9.65685 16 8 16C6.34315 16 5 14.6569 5 13V12H1V10H12V6C12 3.79086 10.2091 2 8 2C5.79086 2 4 3.79086 4 6V8H2V6C2 2.68629 4.68629 0 8 0ZM7 13C7 13.5523 7.44772 14 8 14C8.55228 14 9 13.5523 9 13V12H7V13Z"
      />
    </svg>
  </button>
</div>
`;

exports[`Button examples UiIconSmallButtonComponent should render correctly 1`] = `
<div>
  <button
    aria-label="notifications"
    buttoncolor="tertiary"
    buttonsize="small"
    class="v-button v-button-icon v-button-small v-button-tertiary"
    type="button"
    v-button-icon=""
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-notifications v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      v-icon-visa-notifications-tiny=""
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        class="v-icon-primary"
        d="M8 0C11.3137 0 14 2.68629 14 6V10H15V12H11V13C11 14.6569 9.65685 16 8 16C6.34315 16 5 14.6569 5 13V12H1V10H12V6C12 3.79086 10.2091 2 8 2C5.79086 2 4 3.79086 4 6V8H2V6C2 2.68629 4.68629 0 8 0ZM7 13C7 13.5523 7.44772 14 8 14C8.55228 14 9 13.5523 9 13V12H7V13Z"
      />
    </svg>
  </button>
</div>
`;

exports[`Button examples UiIconSubtleButtonComponent should render correctly 1`] = `
<div>
  <button
    aria-label="notifications"
    buttoncolor="tertiary"
    class="v-button v-button-icon v-button-subtle v-button-tertiary"
    subtle=""
    type="button"
    v-button-icon=""
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-notifications v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      v-icon-visa-notifications-tiny=""
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        class="v-icon-primary"
        d="M8 0C11.3137 0 14 2.68629 14 6V10H15V12H11V13C11 14.6569 9.65685 16 8 16C6.34315 16 5 14.6569 5 13V12H1V10H12V6C12 3.79086 10.2091 2 8 2C5.79086 2 4 3.79086 4 6V8H2V6C2 2.68629 4.68629 0 8 0ZM7 13C7 13.5523 7.44772 14 8 14C8.55228 14 9 13.5523 9 13V12H7V13Z"
      />
    </svg>
  </button>
</div>
`;
